# GEO-Bench-2

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  run_experiment.py
.github/workflows/: style.yaml  tests.yaml
docs/: conf.py  index.md
docs/api/: datamodules.rst  datasets.rst  index.rst
docs/dataset_notebooks/: benv2.ipynb  biomassters.ipynb  burn_scars.ipynb  caffe.ipynb  cloudsen12.ipynb  dynamic_earthnet.ipynb  flair2.ipynb  fotw.ipynb  index.md  kuro_siwo.ipynb  mmflood.ipynb  pastis.ipynb  spacenet2.ipynb  spacenet6.ipynb  spacenet7.ipynb  treesatai.ipynb
docs/dataset_tour/: benv2.ipynb  benv2.md  benv2.py  biomassters.ipynb  burn_scars.ipynb  caffe.ipynb  cloudsen12.ipynb  dynamic_earthnet.ipynb  everwatch.ipynb  flair2.ipynb  fotw.ipynb  index.md  kuro_siwo.ipynb  m4sar.ipynb  mados.ipynb  mmflood.ipynb  pastis_panoptic.ipynb  spacenet2.ipynb  spacenet6.ipynb  spacenet7.ipynb  spacenet8.ipynb  substation.ipynb  treesatai.ipynb  wind_turbine.ipynb  wind_turbine.md
docs/normalization/: clip_z_normalizer.ipynb  index.md  satmae_normalization.ipynb  z_score_normalization.ipynb
geobench_v2/: __init__.py  main.py  test.py
geobench_v2/analysis/: __init__.py  aggregate.ipynb  utils.py
geobench_v2/datamodules/: __init__.py  base.py  benv2.py  biomassters.py  bright.py  burn_scars.py  caffe.py  cloudsen12.py  dotav2.py  dynamic_earthnet.py  everwatch.py  flair2.py  floga.py  fotw.py  kuro_siwo.py  m4sar.py  mados.py  mmflood.py  nzcattle.py  pastis.py  pastis_panoptic.py  qfabric.py  resisc45.py  sen4agrinet.py  spacenet2.py  spacenet6.py  spacenet7.py  spacenet8.py  substation.py  treesatai.py  utils.py  wind_turbine.py
geobench_v2/datamodules/dataset_stats_clip_rescale/biomassters/: biomassters_stats.json
geobench_v2/datamodules/dataset_stats_clip_rescale/caffe/: caffe_stats.json
geobench_v2/datasets/: __init__.py  base.py  benv2.py  biomassters.py  bright.py  burn_scars.py  caffe.py  cloudsen12.py  data_util.py  dotav2.py  dynamic_earthnet.py  everwatch.py  flair2.py  floga.py  fotw.py  kuro_siwo.py  m4sar.py  mados.py  mmflood.py  normalization.py  nz-cattle.py  nzcattle.py  nzcattle_old.py  pastis.py  qfabric.py  resisc45.py  sen4agrinet.py  sensor_util.py  spacenet2.py  spacenet6.py  spacenet7.py  spacenet8.py  substation.py  treesatai.py  utils.py  visualization_util.py  wind_turbine.py
geobench_v2/generate_benchmark/: __init__.py  benv2.py  biomassters.py  bright.py  burn_scars.py  caffe.py  cloudsen12.py  compute_dataset_statistics.py  compute_statistics.py  dotav2.py  dotav2_copy.py  dynamic_earthnet.py  everwatch.py  flair2.py  floga.py  fotw.py  geospatial_split_utils.py  kuro_siwo.py  m4sar.py  mados.py  mmflood.py  new_caffe.py  nzcattle.py  object_detection_util.py  pastis.py  qfabric.py  resisc45.py  sen4agrinet.py  spacenet2.py  spacenet6.py  spacenet7.py  spacenet8.py  substation.py  treesatai.py  utils.py  utils_dataset_statistics.py  wind_turbine.py
geobench_v2/generate_benchmark/configs/: dataset_statistics.yaml  dataset_statistics_clip_rescale.yaml  dataset_statistics_satmae.yaml  dataset_statistics_with_clip.yaml
requirements/: docs.txt  requirements.txt  style.txt  tests.txt
tests/data/benv2/: benv2.tortilla
tests/data/biomassters/: biomassters.tortilla
tests/data/caffe/: caffe.tortilla
tests/data/dynamic_earthnet/: dynamic_earthnet.tortilla
tests/data/everwatch/: everwatch.tortilla
tests/data/flair2/: flair2.tortilla
tests/data/m4sar/: m4sar.tortilla
tests/data/nzcattle/: nzcattle.tortilla
tests/data/pastis/: pastis.tortilla
tests/data/spacenet7/: spacenet7.tortilla
tests/data/treesatai/: treesatai.tortilla
tests/data/wind_turbine/: wind_turbine.tortilla
tests/datamodules/: conftest.py  test_benv2.py  test_biomassters.py  test_bright.py  test_burn_scars.py  test_caffe.py  test_cloudsen12.py  test_dotav2.py  test_dynamic_earthnet.py  test_everwatch.py  test_flair2.py  test_floga.py  test_fotw.py  test_kuro_siwo.py  test_m4sar.py  test_mados.py  test_mmflood.py  test_nzcattle.py  test_pastis.py  test_pastis_panoptic.py  test_qfabric.py  test_resisc45.py  test_sen4agrinet.py  test_spacenet2.py  test_spacenet6.py  test_spacenet7.py  test_spacenet8.py  test_substation.py  test_toolkit.py  test_treesatai.py  test_wind_turbine.py
tests/datasets/: test_data_util.py  test_normalization.py  test_sensor_util.py
tests/generate_benchmark/: test_compute_statistics.py
(+79 files in other folders)
